# rend

./: CMakeLists.txt
assets/: bg_frag.glsl  bg_thermal_frag.glsl  bg_vert.glsl  frag.glsl  thermal_frag.glsl  vert.glsl
src/: camera.c  camera.h  error.c  error.h  getopt.h  input.c  input.h  main.c  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h
